--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "axios": "^1.13.2",
     "expo": "~54.0.27",
     "expo-constants": "~18.0.11",
+    "expo-document-picker": "~12.0.2",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
+    "expo-image-picker": "~16.0.2",
     "expo-linking": "~8.0.10",
     "expo-router": "~6.0.17",
     "expo-splash-screen": "~31.0.12",
